Fix skewed logo on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@ body {
 }
 
 .content {
-  padding: 0 25% 0 25%;
+  margin: 0 25% 0 25%;
 }
 
 @media (max-width: 767px) {
   .content {
-    padding: 0 0 0 0;
+    margin: 0 0 0 0;
   }
 }
 
@@ -24,5 +24,5 @@ body {
 }
 
 .navbar-brand>img {
-  padding: 7px 14px 7px 0px;
+  margin: 7px 14px 7px 0px;
 }
